// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch renders 1`] = `
<label
  className="sc-dmvcBB ffLlKQ"
>
  <input
    checked={true}
    className="sc-iPkRvG bhnwxv"
    id="test-switch-1"
    onChange={[Function]}
    type="checkbox"
  />
  <span
    checked={true}
    className="sc-iElvnI fVElZq"
  />
</label>
`;

exports[`Switch renders RTL 1`] = `
<div
  dir="rtl"
>
  <label
    className="sc-dmvcBB ffLlKQ"
  >
    <input
      checked={true}
      className="sc-iPkRvG bhnwxv"
      id="test-switch-1"
      onChange={[Function]}
      type="checkbox"
    />
    <span
      checked={true}
      className="sc-iElvnI fVElZq"
    />
  </label>
</div>
`;

exports[`Switch renders Theme variant 1`] = `
<label
  className="sc-dmvcBB ffLlKQ"
>
  <input
    checked={true}
    className="sc-iPkRvG bggUfG"
    id="test-switch-1"
    onChange={[Function]}
    type="checkbox"
  />
  <span
    checked={true}
    className="sc-iElvnI kQoqql"
  />
</label>
`;

exports[`Switch renders Theme variant with Caption 1`] = `
<div
  className="sc-eiNpmX cRqeSG"
  dir="ltr"
  style={
    Object {
      "overflow": "visible",
    }
  }
>
  <span
    checked={true}
    className="sc-cXqLfI sc-dxuyJz iXWQEn gJqmWf"
    color="bulma.100"
  >
    AM
  </span>
  <label
    className="sc-dmvcBB ffLlKQ"
  >
    <input
      checked={true}
      className="sc-iPkRvG bggUfG"
      id="test-switch-1"
      onChange={[Function]}
      type="checkbox"
    />
    <span
      checked={true}
      className="sc-iElvnI kQoqql"
    />
  </label>
  <span
    checked={false}
    className="sc-cXqLfI sc-dxuyJz iXWQEn eBOaZv"
    color="bulma.100"
  >
    PM
  </span>
</div>
`;

exports[`Switch renders different Sizes 1`] = `
<div
  className="flex gap-20 items-center"
>
  <label
    className="sc-dmvcBB jmiYle"
    size="xs"
  >
    <input
      checked={true}
      className="sc-iPkRvG eoTpRU"
      id="test-switch-1"
      onChange={[Function]}
      size="xs"
      type="checkbox"
    />
    <span
      checked={true}
      className="sc-iElvnI fVElZq"
    />
  </label>
  <label
    className="sc-dmvcBB hNCoWp"
    size="md"
  >
    <input
      checked={true}
      className="sc-iPkRvG eoTpRU"
      id="test-switch-2"
      onChange={[Function]}
      size="md"
      type="checkbox"
    />
    <span
      checked={true}
      className="sc-iElvnI fVElZq"
    />
  </label>
  <label
    className="sc-dmvcBB gXwfoo"
    size="lg"
  >
    <input
      checked={true}
      className="sc-iPkRvG eoTpRU"
      id="test-switch-3"
      onChange={[Function]}
      size="lg"
      type="checkbox"
    />
    <span
      checked={true}
      className="sc-iElvnI fVElZq"
    />
  </label>
</div>
`;

exports[`Switch renders with Caption 1`] = `
<div
  className="sc-eiNpmX cRqeSG"
  dir="ltr"
  style={
    Object {
      "overflow": "visible",
    }
  }
>
  <span
    checked={true}
    className="sc-cXqLfI sc-dxuyJz iXWQEn gJqmWf"
    color="bulma.100"
  >
    OFF
  </span>
  <label
    className="sc-dmvcBB ffLlKQ"
  >
    <input
      checked={true}
      className="sc-iPkRvG bhnwxv"
      id="test-switch-1"
      onChange={[Function]}
      type="checkbox"
    />
    <span
      checked={true}
      className="sc-iElvnI fVElZq"
    />
  </label>
  <span
    checked={false}
    className="sc-cXqLfI sc-dxuyJz iXWQEn eBOaZv"
    color="bulma.100"
  >
    ON
  </span>
</div>
`;
